Committing funtional Elegibility Normalize subjects